# libkuraji

./: .gitignore  LICENSE  README-ja.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: encoding-ja.md  encoding.md
src/libkuraji/: __init__.py  cli.py  jtalk_dic.py  kana.py  limits.py  mecab_correct.py  translator2.py  unicodeutil.py
src/libkuraji.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: eng2Harness.json  harness.json  mecabFixture.json  mecabHarness.json  nabccHarness.json  test_api_cli.py  test_integration.py  test_security.py  test_translator1.py  test_translator2.py
